dsme (0.61.28) unstable; urgency=low

  [ Matias Muhonen  ]
  * Make autotool to install DSME binaries and modules consistently to /sbin and /lib/dsme

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 29 Oct 2010 11:09:10 +0300

dsme (0.61.27) unstable; urgency=low

  [ Matias Muhonen  ]
  * Fixes: NB#199301: dsme should wait feedback before changing runlevel again

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 25 Oct 2010 11:29:37 +0300

dsme (0.61.26) unstable; urgency=low

  [ Matias Muhonen and Markus Lehtonen ]
  * Fixes: NB#188832: dsme and bme source packages have a cyclic dependency

  [ Semi Malinen ]
  * Fixes: NB#198382: bme does ugly exit during shutdown

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 21 Oct 2010 07:12:50 +0300

dsme (0.61.25) unstable; urgency=low

  * Allow Dbus iface to be used by root (Fixes: NB#195198).
  * Aegis is not used anymore to generate DSME Dbus config. Instead everything is now moved under dsme.conf to have better control and to avoid conflicting settings.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 29 Sep 2010 10:53:13 +0300

dsme (0.61.24) unstable; urgency=low

  [ Markus Lehtonen ]
  * Add build-time option to exclude upstart.
  * Introduce MeeGo style (SysV) init script.
  * Make libpowerontimer build-time configurable.
  * Lower the static priority of dsme-server.

  [ Semi Malinen ]
  * tune syslog and console logging (Fixes: NB#184690)
  * reduce nagging for nonoptimal iphb waiting times (Fixes: NB#192322)
  * thermal management tuning

 -- Semi Malinen <semi.malinen@nokia.com>  Thu, 16 Sep 2010 09:52:20 +0000

dsme (0.61.23) unstable; urgency=low

  [ Simo Piiroinen ]
  * Power on timer module implemented.

  [ Matias Muhonen ]
  * Thermal management tuning.

  * Implemented: SWP#MaSSW-2006, SWP#MaSSW-1922

 -- Simo Piiroinen <simo.piiroinen@nokia.com>  Thu, 26 Aug 2010 13:18:35 +0300

dsme (0.61.22) unstable; urgency=low
