@@ -48,8 +48,8 @@ typedef struct {
 } DSM_MSGTYPE_SHUTDOWN;
 
 enum {
-  DSME_MSG_ENUM(DSM_MSGTYPE_CHANGE_RUNLEVEL, 0x00000315),
-  DSME_MSG_ENUM(DSM_MSGTYPE_SHUTDOWN,        0x00000316),
+  DSME_MSG_ENUM(DSM_MSGTYPE_CHANGE_RUNLEVEL, 0x00000500),
+  DSME_MSG_ENUM(DSM_MSGTYPE_SHUTDOWN,        0x00000501),
 };
 
 #endif
