@@ -38,8 +38,8 @@ typedef dsmemsg_generic_t DSM_MSGTYPE_TELINIT;
 
 
 enum {
-    DSME_MSG_ENUM(DSM_MSGTYPE_SET_USB_STATE, 0x00000317),
-    DSME_MSG_ENUM(DSM_MSGTYPE_TELINIT,       0x00000318),
+    DSME_MSG_ENUM(DSM_MSGTYPE_SET_USB_STATE, 0x00000800),
+    DSME_MSG_ENUM(DSM_MSGTYPE_TELINIT,       0x00000801),
 };
 
 #endif
